# kiota-rust

.github/workflows/: build-vscode-extension.yml  dotnet.yml  integration-tests.yml  project-auto-add.yml  rust.yml  sonarcloud.yml
it/csharp/basic/: basic.csproj
it/go/basic/: go.mod  go.sum
it/java/basic/: pom.xml
it/python/: requirements-dev.txt
it/typescript/: package-lock.json  package.json
rust/: Cargo.toml  README.md
rust/kiota-abstractions/: Cargo.toml
rust/kiota-abstractions/src/: api_error.rs  authentication.rs  case_insensitive_map.rs  date_only.rs  lib.rs  parsable.rs  parse_node.rs  parse_node_factory.rs  request_adapter.rs  request_information.rs  serialization_writer.rs  serialization_writer_factory.rs  time_only.rs
rust/kiota-bundle/: Cargo.toml
rust/kiota-bundle/src/: lib.rs
rust/kiota-http-reqwest/: Cargo.toml
rust/kiota-http-reqwest/src/: http_client_request_adapter.rs  lib.rs  middleware.rs
rust/kiota-http-reqwest/tests/: integration_tests.rs
rust/kiota-serialization-form/: Cargo.toml
rust/kiota-serialization-form/src/: form_parse_node.rs  form_parse_node_factory.rs  form_serialization_writer.rs  form_serialization_writer_factory.rs  lib.rs
rust/kiota-serialization-json/: Cargo.toml
rust/kiota-serialization-json/src/: json_parse_node.rs  json_parse_node_factory.rs  json_serialization_writer.rs  json_serialization_writer_factory.rs  lib.rs
rust/kiota-serialization-text/: Cargo.toml
rust/kiota-serialization-text/src/: lib.rs  text_parse_node.rs  text_parse_node_factory.rs  text_serialization_writer.rs  text_serialization_writer_factory.rs
src/Kiota.Builder/: Kiota.Builder.csproj
src/kiota/: kiota.csproj
tests/Kiota.Builder.IntegrationTests/: Kiota.Builder.IntegrationTests.csproj
tests/Kiota.Builder.Tests/: Kiota.Builder.Tests.csproj  KiotaSearcherTests.cs
tests/Kiota.Tests/: Kiota.Tests.csproj
vscode/: package-lock.json  package.json
