[workspace]
resolver = "2"
members = [
    "kiota-abstractions",
    "kiota-serialization-json",
    "kiota-http-reqwest",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kiota-community/kiota-rust"
rust-version = "1.85.0"

[workspace.dependencies]
# Shared dependencies across crates
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
url = "2"
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
