[package]
name = "kiota-abstractions"
description = "Core abstractions for Kiota-generated Rust API clients"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
