[package]
name = "kiota-serialization-json"
description = "JSON serialization for Kiota-generated Rust API clients"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
kiota-abstractions = { path = "../kiota-abstractions" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
